samples/_failures_safe/1761301055_0a0e02_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e91b1bab.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_e91b1bab.c:167:9: error: expected expression at end of input
  167 |         case
      |         ^~~~
./samples/SAFE/__tmp_e91b1bab.c:167:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e91b1bab.c:167:9: error: expected declaration or statement at end of input
